create update and get players army

--- a/SimularmyAPI/SimularmyAPI.csproj
+++ b/SimularmyAPI/SimularmyAPI.csproj
@@ -19,4 +19,6 @@
     <ProjectReference Include="..\Queries\Queries.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1development_1json__JsonSchema="{" /></VisualStudio></ProjectExtensions>
+
 </Project>
