added multiplayer and game engine

--- a/SimularmyAPI/SimularmyAPI.csproj
+++ b/SimularmyAPI/SimularmyAPI.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Commands\Commands.csproj" />
+    <ProjectReference Include="..\Multiplayer\Multiplayer.csproj" />
     <ProjectReference Include="..\Queries\Queries.csproj" />
   </ItemGroup>
 
